fixed updating messages