@@ -4,7 +4,6 @@ import DAO.MessageDAO;
 import Model.Message;
 
 import java.util.List;
-import java.util.stream.Collectors; 
 
 public class MessageService {
 
@@ -14,45 +13,37 @@ public class MessageService {
         this.messageDAO = messageDAO;
     }
 
-    // Method to create a new message
     public Message createMessage(Message message) {
-        if (message.getMessage_text() == null || message.getMessage_text().trim().isEmpty() || message.getMessage_text().length() > 255) {
-            return null; // Message text must not be blank and must be under 255 characters
+        if (message.getMessage_text() == null || message.getMessage_text().isBlank() || message.getMessage_text().length() > 255) {
+            return null;
         }
         return messageDAO.createMessage(message);
     }
 
-    // Method to retrieve all messages
     public List<Message> getAllMessages() {
         return messageDAO.getAllMessages();
     }
 
-    // Method to retrieve a message by ID
     public Message getMessageById(int message_id) {
         return messageDAO.getMessageById(message_id);
     }
 
-    // Method to delete a message by ID
-    public Message deleteMessageById(int messageId) {
-        Message message = messageDAO.deleteMessageById(messageId);
-        if (message != null) {
-            return message; // Return the deleted message if found
-        }
-        return null; // Return null if the message does not exist
+    public Message deleteMessageById(int message_id) {
+        return messageDAO.deleteMessageById(message_id);
     }
 
-    // Method to update a message's text
-    public boolean updateMessageText(int message_id, String newMessageText) {
-        if (newMessageText == null || newMessageText.trim().isEmpty() || newMessageText.length() > 255) {
-            return false; // Message text must not be blank and must be under 255 characters
+    public Message updateMessageText(int message_id, String newMessageText) {
+        if (newMessageText == null || newMessageText.isBlank() || newMessageText.length() > 255) {
+            return null;
         }
-        return messageDAO.updateMessageText(message_id, newMessageText);
+        boolean updated = messageDAO.updateMessageText(message_id, newMessageText);
+        if (updated) {
+            return messageDAO.getMessageById(message_id);
+        }
+        return null;
     }
 
-    // Method to retrieve all messages by a specific user
     public List<Message> getMessagesByUser(int account_id) {
-        return messageDAO.getAllMessages().stream()
-                .filter(message -> message.getPosted_by() == account_id)
-                .collect(Collectors.toList()); // Replaced toList() with collect(Collectors.toList())
+        return messageDAO.getAllMessagesByUser(account_id);
     }
 }
